Mensaje descriptivo de los cambios

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="content">
 		<div class="intContent">
-			<div>
+			<header id="headerContent">
 				<div class="headerContent">
 					<div>
 						<div>
@@ -30,34 +30,91 @@
 						<div>
 							<span>Possibilities</span>
 						</div>
-						<div>
+						<div class="Menu">
 							<span>Menu</span>
 						</div>
 						
 					</div>
 					<div>
 						<div>
-							<span>Menu</span>
-						</div>
-						<div>
-							<div>
+							<a target="_blank" href="https://twitter.com">
 								<img src="IMG/twitter.svg" alt="twitter">	
-							</div>
+							</a>
 						</div>
 						<div>
-							<div>
+							<a target="_blank" href="https://instagram.com">
 								<img src="IMG/instagram.svg" alt="instagram">
-							</div>
+							</a>
 						</div>
 						<div>
-							<span>Dashboard Panel</span>
+							<span>Dashboard panel</span>
 						</div>
 					</div>
 				</div>
-			</div>
+			</header>
+
+			<main>
+
+				<section>
+					<div>
+						<div>
+							<div>
+								<div class="circle"></div>
+								<div class="circle cr2"></div>
+							</div>
+							<div>
+								<h2>SCIENCE UNIVERSE</h2>
+							</div>
+						</div>
+						<div>
+							<div>
+								<img src="IMG/arrow.svg" alt="Arrow">
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<div></div>
+				<div></div>
+				<div></div>
+			</main>
 		</div>
     </div>
 
+	<div class="overlayMenu">
+		<div>
+			<video autoplay muted loop>
+				<source src="IMG/vid1.mp4" type="video/mp4">
+			</video>
+		</div>
+		<div>
+			<div class="menuClose">
+				<div class="Menu">
+					<img src="IMG/close.svg" alt="Burger">
+				</div>
+			</div>
+			<div>
+				<div>
+					<a href="">Our services</a>
+				</div>
+				<div>
+					<a href="">Possibilities</a>
+				</div>
+				<div>
+					<a href="https://twitter.com">Twitter</a>
+				</div>
+				<div>
+					<a href="https://instagram.com">Instagram</a>
+				</div>
+				<div>
+					<a href="">Dashboard panel</a>
+				</div>
+				<div>
+					<a href="">Formulario</a>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script src="JS/script.js">
 	</script>
