--- a/index.html
+++ b/index.html
@@ -74,9 +74,48 @@
 					</div>
 				</section>
 
+				<nav>
+					<div>
+						<div>
+							<div class="cajaNum1">
+								<div class="textArea">
+									<div>
+										<h2><span>Explain</span> natural phenomena and make predictions.</h2>
+									</div>
+									<div>
+										<p><span>Scientific knowledge</span> is constantly evolving as new 
+											discoveries and technologies emerge, contributing to our understanding
+											of the natural world.</p>
+									</div>
+								</div>
+								<div class="line">p</div>
+								<div class="textArea2">
+									<p>TEXTO PRUEBA</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div>
+							<div>
+								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt 
+									laboriosam doloribus, corrupti iusto culpa mollitia. Quasi vitae, et id 
+									ad tempora enim veniam nam numquam delectus quos a similique rerum.</p>
+							</div>
+						</div>
+						<div>
+							<div>
+								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt 
+									laboriosam doloribus, corrupti iusto culpa mollitia. Quasi vitae, et id 
+									ad tempora enim veniam nam numquam delectus quos a similique rerum.</p>
+							</div>
+						</div>
+					</div>
+				</nav>
+
+
 				<div></div>
-				<div></div>
-				<div></div>
+				<footer></footer>
 			</main>
 		</div>
     </div>
