Trabajo funcionando hasta el nav

--- a/index.html
+++ b/index.html
@@ -82,15 +82,25 @@
 									<div>
 										<h2><span>Explain</span> natural phenomena and make predictions.</h2>
 									</div>
+								</div>
+								<div class="contentLine">
 									<div>
 										<p><span>Scientific knowledge</span> is constantly evolving as new 
 											discoveries and technologies emerge, contributing to our understanding
 											of the natural world.</p>
 									</div>
+									<div class="line">
+									</div>
 								</div>
-								<div class="line">p</div>
 								<div class="textArea2">
-									<p>TEXTO PRUEBA</p>
+									<div>
+										<span>OBSERVATION SYSTEM</span>
+									</div>
+									<div>
+										<div>
+											<img src="IMG/arrowW.svg" alt="Arrow">
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -98,23 +108,56 @@
 					<div>
 						<div>
 							<div>
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt 
-									laboriosam doloribus, corrupti iusto culpa mollitia. Quasi vitae, et id 
-									ad tempora enim veniam nam numquam delectus quos a similique rerum.</p>
+								<div class="cajaNum2">
+									<div>
+										<h2>21.8M+</h2>
+									</div>
+									<div>
+										<h3>Analysis</h3>
+										<p><span>Based on observation</span> and existing
+											knowledge scientists propose a testable
+											explanation or hypothesis to answer.</p>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div>
 							<div>
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt 
-									laboriosam doloribus, corrupti iusto culpa mollitia. Quasi vitae, et id 
-									ad tempora enim veniam nam numquam delectus quos a similique rerum.</p>
+								<div class="cajaNum3">
+
+									<div>
+										<div>
+											<div>
+												<div class="cicle"></div>
+											</div>
+											<div>
+												<div>
+													<img src="IMG/icon.png" alt="Icon">
+												</div>
+											</div>
+										</div>
+										<div>
+											<span>Research</span>
+										</div>
+									</div>
+
+									<div>
+										<h3>Communty</h3>
+										<p>New evidence and <span>discoveries</span> can lead to
+											the modification or rejection of existing
+											theories and the development</p>
+									</div>
+
+								</div>
 							</div>
 						</div>
 					</div>
 				</nav>
 
 
-				<div></div>
+				<div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, nesciunt blanditiis. Minima, saepe! Pariatur, sit officiis numquam officia dolore quae quis eveniet non odit ullam, voluptate alias tempora excepturi beatae.</p>
+				</div>
 				<footer></footer>
 			</main>
 		</div>
