--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
 					</div>
 				</div>
 			</header>
-
 			<main>
 
-				<section>
+				<section class="mainContent">
 					<div>
 						<div>
 							<div>
@@ -74,7 +73,7 @@
 					</div>
 				</section>
 
-				<nav>
+				<nav class="mainContent">
 					<div>
 						<div>
 							<div class="cajaNum1">
@@ -96,7 +95,7 @@
 									<div>
 										<span>OBSERVATION SYSTEM</span>
 									</div>
-									<div>
+									<div class="findArrowUnderline">
 										<div>
 											<img src="IMG/arrowW.svg" alt="Arrow">
 										</div>
@@ -154,11 +153,21 @@
 					</div>
 				</nav>
 
-
-				<div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, nesciunt blanditiis. Minima, saepe! Pariatur, sit officiis numquam officia dolore quae quis eveniet non odit ullam, voluptate alias tempora excepturi beatae.</p>
+				<div class="carousel mainContent">
+					<div class="carousel-inner">
+						<p>SCIENTIST  MAKE OBSERVATIONS OF THE NATURAL WORLD AND IDENTIFY A SPECIFIC PHENOMENON OR QUESTION OF
+							INTEREST • SCIENTIS ANALYSE THE COLLECTED DATA USING STATISTICAL AND ANALYTICAL METHODS •
+						</p>
+					</div>
 				</div>
-				<footer></footer>
+
+				<footer class="footerContent">
+					<p>
+						SCIENCE IS A SYSTEMATIC AND <span>ORGANIZED APPROACH</span> TO UNDERSTANDING THE NATURAL WORLD THROUGH 
+						OBSERVATION EXPERIMENTATION AND THE FORMULATIONS OF THEORIES OR LAWS <span>BASED ON EVIDENCE</span>
+					</p>
+				</footer>
+
 			</main>
 		</div>
     </div>
@@ -177,27 +186,26 @@
 			</div>
 			<div>
 				<div>
-					<a href="">Our services</a>
+					<a href="">· Our services</a>
 				</div>
 				<div>
-					<a href="">Possibilities</a>
+					<a href="">· Possibilities</a>
 				</div>
 				<div>
-					<a href="https://twitter.com">Twitter</a>
+					<a href="https://twitter.com">· Twitter</a>
 				</div>
 				<div>
-					<a href="https://instagram.com">Instagram</a>
+					<a href="https://instagram.com">· Instagram</a>
 				</div>
 				<div>
-					<a href="">Dashboard panel</a>
+					<a href="">· Dashboard panel</a>
 				</div>
 				<div>
-					<a href="">Formulario</a>
+					<a href="">· Formulario</a>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<script src="JS/script.js">
 	</script>
 </body>
